--- a/assets/style.css
+++ b/assets/style.css
@@ -3,14 +3,14 @@ body {
     ;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     /* border: 1px solid; */
 
 }
 
-.container{
+.container {
     width: 1140px;
     margin: 0 auto;
     /* border: 1px solid; */
@@ -19,16 +19,18 @@ body {
 /* .nav-toggle{
     flex-shrink: 0;
 } */
-.nav{
+.nav {
     display: flex;
-   padding: 15px 25px;
+    padding: 15px 25px;
     /* border: 1px solid; */
     justify-content: space-between;
 }
-.logo{
-   font-size: 40px;
-   padding:10px
+
+.logo {
+    font-size: 40px;
+    padding: 10px
 }
+
 .nav-list {
     flex-shrink: 0;
     width: 400px;
@@ -39,44 +41,46 @@ body {
     align-items: center;
     font-size: 20px;
     font-weight: 600;
-    
+
 }
 
-.nav-list a{
+.nav-list a {
     text-decoration: none;
     text-transform: none;
     color: black;
 }
 
 
-.hero{
+.hero {
     /* border: 1px solid; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 120px;
-    height:  600px;
+    height: 600px;
     margin-bottom: 50px;
 }
 
-.hero-bold{
+.hero-bold {
     width: 600px;
     font-size: 60px;
     font-weight: 700;
 
 }
 
-.hero-title{
+.hero-title {
     margin-top: 20px;
     width: 400px;
     font-weight: 300;
     font-size: 18px;
 }
-.img-hero{
+
+.img-hero {
     height: 400px;
     width: 400px;
 }
-.btn-price{
+
+.btn-price {
     padding: 10px 15px;
     background-color: white;
     border-radius: 20px;
@@ -85,7 +89,8 @@ body {
     color: black;
     margin-top: 15px;
 }
-.info{
+
+.info {
     /* border: 1px solid; */
     margin-top: 30px;
 }
@@ -94,14 +99,14 @@ body {
     text-align: center;
 }
 
-.info-text h1{
+.info-text h1 {
     font-weight: 700;
     font-size: 56px;
     line-height: 50px;
     margin-bottom: 30px;
 }
 
-.info-text p{
+.info-text p {
     font-weight: 400;
     font-size: 30px;
     line-height: 28px;
@@ -114,66 +119,67 @@ body {
     display: flex;
    padding: 122px 0; */
 
-   .grid-container {
+.grid-container {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     padding: 122px 0;
-  }
+}
 
-  .grid-item {
+.grid-item {
     display: flex;
     align-items: center;
     padding: 20px;
     text-align: center;
-  }
+}
 
-.grid-item img{
+.grid-item img {
     height: 70px;
 }
-  /* .grid-item {
+
+/* .grid-item {
     display: flex;
     align-items: center;
   } */
 
-  .grid-item h3{
+.grid-item h3 {
     margin-left: 30px;
-  }
+}
 
-  .superiority{
+.superiority {
     display: flex;
     /* border: 1px solid; */
     align-items: center;
     height: 100vh;
-    
-  }
 
-  .superiority-title{
+}
+
+.superiority-title {
     width: 40%;
-    
-  }
 
-  .superiority-title h1{
+}
+
+.superiority-title h1 {
     font-size: 40px;
     text-transform: capitalize;
     font-weight: 700;
-    line-height:50px ;
-  }
+    line-height: 50px;
+}
 
-  .superiority-title p{
+.superiority-title p {
     font-size: 15px;
     line-height: 25px;
     margin-top: 10px;
-  }
+}
 
-  .superiority-img{
+.superiority-img {
     height: 300px;
     width: 500px;
     /* border: 1px solid; */
 }
 
-.btn-superiority{
+.btn-superiority {
     margin-top: 40px;
     padding: 10px 15px;
     background-color: white;
@@ -184,76 +190,112 @@ body {
 }
 
 
-/* .price{
-    background-color: #2f9456 ;
-} */
+.price {
+    height: 100vh;
+}
 
-.price-text{
+.price-text {
     width: 100%;
     text-align: center;
 }
 
-.price-text h1{
+.price-text h1 {
     font-weight: 700;
     font-size: 56px;
     line-height: 50px;
     margin-bottom: 30px;
 }
 
-.price-text p{
+.price-text p {
     font-weight: 400;
     font-size: 30px;
     line-height: 28px;
 }
 
-.switcher{
+.switcher {
     display: flex;
-    justify-content:center
+    justify-content: center;
+    align-items: center;
+    border: 1px;
+    border-radius: 50px;
+    width: 189px;
+    background-color:#d7f2ba;
+    margin: 0 auto;
+    margin-top: 25px;
+margin-bottom: 30px;
+
 }
 
-.row-card{
+.on-tab {
+    border: none;
+    padding: 10px 15px;
+    background-color: #46780f;
+    color: white;
+    border-radius: 50px;
+    font-size: 13px;
+    font-weight: 700;
+}
+
+.off-tab {
+    border: none;
+    padding: 10px 15px;
+    background-color: #d7f2ba;
+    border-radius: 50px;
+    font-size: 13px;
+    font-weight: 700;
+    color:#a4a4a4 ;
+}
+
+.row-card {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 1fr);
     gap: 2px;
     /* padding: 0px 60px; */
 }
 
-.card-price{
+.card-price {
     height: 100%;
     margin: auto;
     width: 60%;
-    background:#f9fafb;
+    background: #f9fafb;
     border: 1px solid;
     border-radius: 10px;
     padding: 20px 30px;
     line-height: 35px;
 }
 
-.card-price h2{
+.card-price h2 {
     font-size: 20px;
     font-weight: 700;
 }
 
-.card-price h3{
+.card-price h3 {
     font-size: 40px;
 }
 
-.card-price span{
+.card-price span {
     font-size: 15px;
 }
 
-.card-price-list{
+.card-price-list {
     display: flex;
     align-items: center;
     margin-top: 20px;
     /* padding: 10px 20px; */
 }
 
-.card-price-list p{
+.card-price-list p {
     margin-left: 10px;
 }
 
-.card-price button{
+
+.btn-subs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-subs button {
     border-radius: 20px;
     font-size: 15px;
     font-weight: 700;
@@ -261,5 +303,4 @@ body {
     padding: 15px 100px;
     color: white;
     background-color: rgb(75, 70, 70);
-    
 }
